src/ast/snapshots/rust_interpreter__ast__expression__test__if_expr_1.snap
---
source: src/ast/expression.rs
description: "if (x < y) { x }"
expression: first
---
if (x < y)
{
	x;
};
