src/ast/snapshots/rust_interpreter__ast__expression__test__if_expr_2.snap
---
source: src/ast/expression.rs
description: "if (x < y) { x } else { y }"
expression: first
---
if (x < y)
{
	x;
} else {
	y;
};
