src/ast/snapshots/rust_interpreter__ast__expression__test__if_expr_3.snap
---
source: src/ast/expression.rs
description: "if (x < y) { x } else { let z = x + y; z }"
expression: first
---
if (x < y)
{
	x;
} else {
	let z = (x + y);
	z;
};
