src/ast/snapshots/rust_interpreter__ast__expression__test__infix_expr_1.snap
---
source: src/ast/expression.rs
description: 5 + 6;
expression: first
---
ExpressionStatement(
    Infix(
        (5 + 6),
    ),
)
