src/ast/snapshots/rust_interpreter__ast__expression__test__infix_expr_5.snap
---
source: src/ast/expression.rs
description: true == true;
expression: first
---
ExpressionStatement(
    Infix(
        (true == true),
    ),
)
