src/ast/snapshots/rust_interpreter__ast__expression__test__infix_expr_6.snap
---
source: src/ast/expression.rs
description: true != false;
expression: first
---
ExpressionStatement(
    Infix(
        (true != false),
    ),
)
