src/ast/snapshots/rust_interpreter__ast__expression__test__infix_expr_8.snap
---
source: src/ast/expression.rs
description: 7 > 6
expression: first
---
ExpressionStatement(
    Infix(
        (7 > 6),
    ),
)
