src/ast/snapshots/rust_interpreter__ast__expression__test__infix_expr_9.snap
---
source: src/ast/expression.rs
description: "\"foo\" != \"bar\""
expression: first
---
ExpressionStatement(
    Infix { token: "!=", left: StringLiteral("foo"), right: StringLiteral("bar") },
)
